Fixed alignment issues

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -10,7 +10,8 @@
   /* display, flex-direction, flex-grow, flex-basis */
   display: flex;
   flex-direction: column;
-  flex-basis: 400px;
+  flex-basis: 300px;
+  flex-grow: 10;
   border: 1px solid #cad0d2;
   border-radius: 4px;
   border: none;
@@ -22,8 +23,8 @@
 .cardDescription {
   /* display, flex-direction, align-items, flex-grow */
   display: flex;
-  flex-direction: column-reverse;
-  flex-grow: 3;
+  flex-direction: column;
+  flex-grow: 500;
   align-items: center;
   padding: 15px 0;
 }
@@ -37,8 +38,6 @@ html {
 }
 
 .cardDescriptionIcon {
-  display: flex;
-  align-items: flex-start;
   font-size: 32px;
   margin-bottom: 10px;
   color: #bcd2da;
